--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(98, 22, 131);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(98, 22, 131);
 }
 
 .chamada {
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(32, 71, 37);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(23, 17, 85);
 }
